--- a/styl/style.styl
+++ b/styl/style.styl
@@ -22,8 +22,11 @@ html
 
 body
   position relative
-  font-family 'Junge', serif
+  font-family Georgia, serif
   color color-default
+
+.junge
+  font-family 'Junge', serif
 
 a
   color inherit
