modify project list

--- a/src/jade/includes/_main.jade
+++ b/src/jade/includes/_main.jade
@@ -28,6 +28,6 @@ div.main
       href: 'https://gallery.yhey.me/'
     }, {
       title: 'simple-url-dispatcher',
-      description: 'The dispatcher to divide methods of client-side JavaScript according to URL.',
+      description: 'URLに応じて実行する処理を振り分けるシンプルなディスパッチャーです。',
       href: 'https://github.com/yuheiy/simple-url-dispatcher'
     })
