--- a/src/jade/includes/_main.jade
+++ b/src/jade/includes/_main.jade
@@ -5,8 +5,8 @@ div.main
     h1= title
     p
       time(datetime="1995-10-03") 95年
-      | 生まれ、淡路島育ちです。大阪に住んでいます。
-    p フロントエンドエンジニアになりたい人です。
+      | 生まれ、淡路島育ちです。
+    p フロントエンドエンジニアになります。
 
   section
     h1 Blog
