--- a/src/jade/includes/_main.jade
+++ b/src/jade/includes/_main.jade
@@ -11,9 +11,8 @@ div.main
   section
     h1 Blog
 
-    div#blog-list
-      ul.post-list
-        li Now Loading...
+    ul#blog-list.post-list
+      li Now Loading...
 
   section
     h1 Personal Projects
