--- a/src/jade/includes/_main.jade
+++ b/src/jade/includes/_main.jade
@@ -14,6 +14,9 @@ div.main
     ul#blog-list.post-list
       li Now Loading...
 
+    p.readmore
+      a(href="http://yuheiy.hatenablog.com/") 全ての記事を読む
+
   section
     h1 Personal Projects
 
