modify readmore text

--- a/src/jade/includes/_main.jade
+++ b/src/jade/includes/_main.jade
@@ -15,7 +15,7 @@ div.main
       li Now Loading...
 
     p.readmore
-      a(href="http://yuheiy.hatenablog.com/") 全ての記事を読む
+      a(href="http://yuheiy.hatenablog.com/") 他の記事も見る
 
   section
     h1 Personal Projects
