--- a/src/includes/_main.jade
+++ b/src/includes/_main.jade
@@ -11,7 +11,7 @@ div.main
   section
     h1 Articles
 
-    ul#blog-list.post-list
+    ul#entry-list.post-list
       li Now Loading...
 
     p.readmore
