--- a/src/index.jade
+++ b/src/index.jade
@@ -11,7 +11,6 @@ block append head
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-58638423-4', 'auto');
     ga('send', 'pageview');
 
@@ -20,5 +19,5 @@ block content
   include ./includes/_main
   include ./includes/_footer
 
-  script(src='https://www.google.com/jsapi')
-  script(src='/js/main.js')
+  script(src="https://www.google.com/jsapi")
+  script(src="/js/main.js")
