modify section title

--- a/src/includes/_main.jade
+++ b/src/includes/_main.jade
@@ -9,7 +9,7 @@ div.main
     p フロントエンドエンジニアになります。
 
   section
-    h1 Articles
+    h1 Recent Entries
 
     ul#entry-list.post-list
       li Now Loading...
