--- a/src/scss/_class.scss
+++ b/src/scss/_class.scss
@@ -1,9 +1,13 @@
 %container {
-  max-width: $width-content;
+  max-width: $width-content-half;
   margin-left: auto;
   margin-right: auto;
   padding-left: $padding-base;
   padding-right: $padding-base;
+
+  @media (min-width: $break-point) {
+    max-width: $width-content;
+  }
 }
 
 %ellipsis {
