--- a/src/includes/_main.jade
+++ b/src/includes/_main.jade
@@ -5,8 +5,8 @@ div.main
     h1= title
     p
       time(datetime="1995-10-03") 95年
-      | 生まれ、淡路島育ちです。
-    p フロントエンドエンジニアになります。
+      | 淡路島生まれです。
+    p 東京でフロントエンドエンジニアをしています。
 
   section
     h1 Recent Entries
