--- a/src/includes/_main.jade
+++ b/src/includes/_main.jade
@@ -5,7 +5,7 @@ div.main
     h1= title
     p
       time(datetime="1995-10-03") 95年
-      | 淡路島生まれです。
+      | 兵庫県生まれです。
     p 東京でフロントエンドエンジニアをしています。
 
   section
