--- a/src/index.jade
+++ b/src/index.jade
@@ -2,7 +2,7 @@ extends ./extends/_layout
 
 block global-vars
   - var title = '安田 祐平';
-  - var description = '95年淡路島生まれです。東京でフロントエンドエンジニアをしています。';
+  - var description = '95年兵庫県生まれです。東京でフロントエンドエンジニアをしています。';
 
 block append head
   link(rel="stylesheet", href="/css/style.css")
