--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -23,10 +23,9 @@
   }
 
   time {
-    display: block;
-
     &::before {
-      content: "Published on ";
+      content: "\APublished on ";
+      white-space: pre;
     }
   }
 }
