--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
+@import "node_modules/sanitize.css/sanitize";
 @import "var";
 @import "class";
-@import "node_modules/sanitize.css/lib/sanitize.scss";
 @import "core";
 @import "main";
 @import "bg";
