--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -1,3 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  line-height: $line-height;
+}
+
+body {
+  font-family: $font-stack-sans-serif;
+  color: $color-dark;
+  background-color: $color-light;
+}
+
 a {
   color: inherit;
   text-decoration: underline;
