--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -3,7 +3,7 @@ $color-light: #fefefe;
 
 $opacity-quiet: .6;
 
-$font-stack-sans-serif: -apple-system, "Segoe UI", sans-serif;
+$font-stack-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 
 $line-height: 1.8;
 
